--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,4 +23,11 @@
     <i class="devicon-visualstudio-plain colored"></i>
     <p></p>
   </div>
+  <div class="tech">
+    <h2>Tools</h2>
+    <i class="devicon-git-plain colored"></i>
+    <i class="devicon-gulp-plain colored"></i>
+    <i class="devicon-visualstudio-plain colored"></i>
+    <p></p>
+  </div>
 </div>
