--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,23 +4,17 @@
 </div>
 <div class="user">
   <div class="tech">
-    <h2>Design</h2>
-    <i class="devicon-html5-plain colored"></i>
-    <i class="devicon-bootstrap-plain colored"></i>
-    <p></p>
-  </div>
-  <div class="tech">
-    <h2>Code</h2>
+    <h2>Front End</h2>
     <i class="devicon-javascript-plain colored"></i>
     <i class="devicon-react-original-wordmark colored"></i>
-    <i class="devicon-nodejs-plain-wordmark"></i>
+    <i class="devicon-vuejs-plain colored"></i>
     <p></p>
   </div>
   <div class="tech">
-    <h2>Tools</h2>
-    <i class="devicon-git-plain colored"></i>
-    <i class="devicon-gulp-plain colored"></i>
-    <i class="devicon-visualstudio-plain colored"></i>
+    <h2>Back End</h2>
+    <i class="devicon-java-plain colored"></i>
+    <i class="devicon-python-plain colored"></i>
+    <i class="devicon-nodejs-plain colored"></i>
     <p></p>
   </div>
   <div class="tech">
