--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,12 +6,12 @@
     <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Operation B.O.T. </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>This is a project I collaberated with when I was working at a High School. The goal was to track tardies and implement consequences to constant offenders. The program decreased tardies and absences by 70% and saved the High School saved $46k+. This program was devoloped with HTML5, CSS3, JavaScript and PHP.</p>
+    <a class="project-link" href="operationbot.com">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -19,11 +19,11 @@
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Catch Of The Day </h3>
     <ul>
       <li> Featured Skills</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>This a sample project used to feature the use of React.js and Firebase </p>
+    <a class="project-link" href="cotd-pglvqflhmg.now.sh/">Check it out</a>
   </div>
 </div>
