--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,7 @@
       <li> Featured Skills</li>
     </ul>
     <p>This is a project I collaberated with when I was working at a High School. The goal was to track tardies and implement consequences to constant offenders. The program decreased tardies and absences by 70% and saved the High School saved $46k+. This program was devoloped with HTML5, CSS3, JavaScript and PHP.</p>
-    <a class="project-link" href="operationbot.com">Check it out</a>
+    <a class="project-link" href="http://www.operationbot.com">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
@@ -24,6 +24,6 @@
       <li> Featured Skills</li>
     </ul>
     <p>This a sample project used to feature the use of React.js and Firebase </p>
-    <a class="project-link" href="cotd-pglvqflhmg.now.sh/">Check it out</a>
+    <a class="project-link" href="http://cotd-pglvqflhmg.now.sh/">Check it out</a>
   </div>
 </div>
