--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,9 +8,9 @@
   <div class="contents">
     <h3> Operation B.O.T. </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> PHP, JavaScript, MySql</li>
     </ul>
-    <p>This is a project I collaberated with when I was working at a High School. The goal was to track tardies and implement consequences to constant offenders. The program decreased tardies and absences by 70% and saved the High School saved $46k+. This program was devoloped with HTML5, CSS3, JavaScript and PHP.</p>
+    <p>This is a project I collaberated with when I was working at a High School. The goal was to track tardies and implement consequences to constant offenders. The program decreased tardies and absences by 70% and saved the High School saved $46k+. This program was devoloped with HTML5, CSS3, JavaScript, PHP and MySQL.</p>
     <a class="project-link" href="http://www.operationbot.com">Check it out</a>
   </div>
 </div>
@@ -21,7 +21,7 @@
   <div class="contents-right">
     <h3> Catch Of The Day </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> React.js, Firebase</li>
     </ul>
     <p>This a sample project used to feature the use of React.js and Firebase </p>
     <a class="project-link" href="http://cotd-pglvqflhmg.now.sh/">Check it out</a>
