--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="Operation BOT" src="{{ "/assets/img/operationbot_logo.jpg" | prepend: site.baseurl }}" />
+    <img alt="Mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Operation B.O.T. </h3>
@@ -16,7 +16,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="react/firebase" src="{{ "/assets/img/react_firebase.jpg" | prepend: site.baseurl }}" />
+    <img alt="Skate" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Catch Of The Day </h3>
