--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -27,3 +27,29 @@
     <a class="project-link" href="http://cotd-pglvqflhmg.now.sh/">Check it out</a>
   </div>
 </div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="Mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents">
+    <h3> Link Shortner App </h3>
+    <ul>
+      <li> Meteor, React.js, MongoDB</li>
+    </ul>
+    <p>This is a Short Link App that allows you to create an account, shorten and visit your links! </p>
+    <a class="project-link" href="https://short-lnk-carapia.herokuapp.com/>Check it out</a>
+  </div>
+</div>
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="Skate" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Score Keep App </h3>
+    <ul>
+      <li> Meteor, React.js, MongoDB</li>
+    </ul>
+    <p>This is an app that allows you to add players and keep track of scores. </p>
+    <a class="project-link" href="https://score-keep-carapia.herokuapp.com/">Check it out</a>
+  </div>
+</div>
