--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -37,7 +37,7 @@
       <li> Meteor, React.js, MongoDB</li>
     </ul>
     <p>This is a Short Link App that allows you to create an account, shorten and visit your links! </p>
-    <a class="project-link" href="https://short-lnk-carapia.herokuapp.com/>Check it out</a>
+    <a class="project-link" href="https://short-lnk-carapia.herokuapp.com/">Check it out</a>
   </div>
 </div>
 <div class="user-projects">
